[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "pip>=22.3.1", "wheel>=0.38.4"]
build-backend = "poetry_dynamic_versioning.backend"

[tool]

[tool.autopep8]
max_line_length = 120
ignore = "E203,E501,W503,E402"
in-place = true
recursive = true
aggressive = 3
exclude = "pylav/_city_dump.py"

[tool.black]
line-length = 120
target-version = ['py310']
force-exclude = '''
    /(
        pylav\/vendor
    )/
    '''

[tool.isort]
profile = "black"
line_length = 120
py_version = 310
known_third_party = [
    "aiofile",
    "aiohttp",
    "aiohttp_client_cache",
    "aiopath",
    "anyio",
    "apscheduler",
    "apsw",
    "asyncpg",
    "asyncspotify",
    "asyncstdlib",
    "brotli",
    "cached_property",
    "discord",
    "deepdiff6",
    "expiringdict",
    "humanize",
    "iso8601",
    "packaging",
    "piccolo",
    "platformdirs",
    "psutil",
    "pytz",
    "yaml",
    "red_commons",
    "redis",
    "rich",
    "tabulate",
    "typing_extensions",
    "ujson",
    "uvloop"

]
known_local_folder = [
    "pylav"
]

[tool.poetry]
name = "Py-Lav"
version = "1.0.0.dev199+b2472d3"
description = " A Lavalink WebSocket & API wrapper for discord.py"
authors = ["Draper <27962761+Drapersniper@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pylav"}]
license = "AGPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
repository = "https://github.com/Drapersniper/PyLav"
documentation = "https://pylav.readthedocs.io/en/latest/"
include = [
    "CHANGELOG.md",
    "LICENSE",
    "**/LICENSE.*",
]

[tool.poetry.dependencies]
python = "^3.11"
pip = "^22.3.1"
setuptools = "^65.6.3"
wheel = "^0.38.4"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
aiohttp-client-cache = "^0.7.3"
aiopath = "^0.6.11"
APScheduler = "^3.9.1.post1"
apsw = "^3.40.0.0"
asyncpg = "^0.27.0"
asyncspotify = "^0.12.1"
asyncstdlib = "^3.10.5"
Brotli = "^1.0.9"
cached-property = "^1.5.2"
cashews = {extras = ["dill", "redis"], version = "^5.0.0"}
dacite = "^1.6.0"
"discord.py" = {extras = ["speed"], version = "^2.1.0"}
deepdiff6 = "^6.2.0"
expiringdict = "^1.2.2"
humanize = "^4.4.0"
iso8601 = "^1.1.0"
netaddr = "^0.8.0"
numpy = "^1.23.5"
orjson = "^3.8.3"
packaging = "^22.0"
piccolo = {extras = ["all"], version = "^0.101.0"}
platformdirs = "^2.6.0"
psutil = "^5.9.4"
python-dateutil = "^2.8.2"
pytz = "^2022.6"
PyYAML = "^6.0"
Red-Commons = "^1.0.0"
redis = "^4.4.0"
rich = "^12.6.0"
tabulate = {extras = ["widechars"], version = "^0.9.0"}
typing-extensions = "^4.4.0"
ujson = "^5.6.0"
uvloop = { version = "^0.17.0", markers = "sys_platform != 'win32' and platform_python_implementation == 'CPython'" }
importlib-metadata = "^5.1.0"

[tool.poetry.extras]
redis = ["redis"]
speed = ["orjson"]
all = ["redis", "orjson"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Drapersniper/PyLav/issues"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
bump = true

[tool.poetry-dynamic-versioning.substitution]
files = ["*.py", "*/__init__.py", "*/__version__.py", "*/_version.py"]
patterns = ["(^__version__\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])"]
