[metadata]
name = Py-Lav
description = A Lavalink WebSocket & API wrapper for discord.py
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Drapersniper/PyLav
author = Draper
author_email = draper@draper.wtf
license = AGPLv3
license_file = LICENSE
license_files =
    LICENSE
project_urls =
    Documentation=https://pylav.readthedocs.io/en/latest/
    Issue tracker=https://github.com/Drapersniper/PyLav/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control :: Git
    Topic :: Utilities
    Typing :: Typed
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
description_file = README.md

[options]
packages = find_namespace:
install_requires =
    aiocache[memcached,redis,msgpack]==0.11.1
    aiohttp[speedups]==3.8.1
    aiohttp-client-cache==0.7.3
    aiopath==0.6.0
    APScheduler==3.9.1
    apsw-wheels==3.36.0.post1
    asyncpg==0.26.0
    async_lru==1.0.3
    asyncspotify==0.12.1
    asyncstdlib==3.10.5
    Brotli==1.0.9
    cached-property==1.5.2
    dacite==1.6.0
    discord.py[speed]==2.0.1
    deepdiff6==6.2.0
    expiringdict==1.2.2
    humanize==4.3.0
    iso8601==1.0.2
    netaddr==0.8.0
    numpy==1.23.3
    orjson==3.8.0
    packaging==21.3
    piccolo[all]==0.94.0
    platformdirs==2.5.2
    psutil==5.9.1
    python-dateutil==2.8.2
    pytz==2022.2.1
    pytz-deprecation-shim>=0.1.0.post0
    PyYAML==6.0
    Red-Commons==1.0.0
    redis==4.3.4
    rich==12.5.1
    tabulate[widechars]==0.8.10
    typing_extensions==4.3.0
    ujson==5.4.0
    uvloop==0.16.0; sys_platform != "win32" and platform_python_implementation == "CPython"
    attrs==22.1.0
    cffi==1.15.1
    charset-normalizer==2.1.0
    click==8.1.3
    importlib-metadata==4.12.0
    pygments==2.12.0
    zipp==3.8.1
python_requires = >=3.10.0,<3.11
include_package_data = True
zip_safe = False

[options.extras_require]
docs =
    Sphinx==5.1.1
    sphinx-rtd-theme==1.0.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sphinxcontrib-trio==1.1.2
    sphinxcontrib-websupport==1.2.4
