[metadata]
name = Py-Lav
description = A Lavalink WebSocket & API wrapper for discord.py
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Drapersniper/PyLav
author = Draper
author_email = draper@draper.wtf
license = AGPLv3
license_file = LICENSE
license_files =
    LICENSE
project_urls =
    Documentation=https://pylav.readthedocs.io/en/latest/
    Issue tracker=https://github.com/Drapersniper/PyLav/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control :: Git
    Topic :: Utilities
    Typing :: Typed
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
description_file = README.md

[options]
packages = find_namespace:
python_requires = >=3.11,<3.12
include_package_data = True
zip_safe = False

[options.packages.find]
include =
    pylav
    pylav.*
